[gd_scene load_steps=2 format=3 uid="uid://di7ygfhhk88lk"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_dmhmg"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = 9.0
offset_right = -15.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmhmg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 75.0
offset_right = 880.0
offset_bottom = 502.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 75
alignment = 1

[node name="kont" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "KONTYNUUJ"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "WYJDÅ¹"

[node name="cred" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[connection signal="pressed" from="PanelContainer/VBoxContainer/kont" to="." method="_on_kont_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/cred" to="." method="_on_cred_pressed"]
